All Hotkey "C" are unexpectedly translated in menus #46268

Closed
opened 2015-09-25 19:47:18 +02:00 by Satoshi Yamasaki · 10 comments

System Information
Windows 8.1Pro x64

Blender Version
Broken: 2.76TB1, RC1, RC2
Worked: 2.75

Short description of error
All "C" key of hotkey strings for menus are translated.
The msgstr "C" has been already used for Compositor (:src: bpy.types.CompositorNodeLevels.channel:'COMBINED_RGB'). I coldn't expected such translation for hotkeys.
Please exclude [A-Z] from hotkey translating or make special translation tags for it.

Thanks,

Exact steps for others to reproduce the error
See the attached image.wrongtranslation.jpg

**System Information** Windows 8.1Pro x64 **Blender Version** Broken: 2.76TB1, RC1, RC2 Worked: 2.75 **Short description of error** All "C" key of hotkey strings for menus are translated. The msgstr "C" has been already used for Compositor (:src: bpy.types.CompositorNodeLevels.channel:'COMBINED_RGB'). I coldn't expected such translation for hotkeys. Please exclude [A-Z] from hotkey translating or make special translation tags for it. Thanks, **Exact steps for others to reproduce the error** See the attached image.![wrongtranslation.jpg](https://archive.blender.org/developer/F239121/wrongtranslation.jpg)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Bastien Montagne was assigned by Satoshi Yamasaki 2015-09-25 19:47:18 +02:00
Author
Member

Added subscriber: @SatoshiYamasaki

Added subscriber: @SatoshiYamasaki

#46676 was marked as duplicate of this issue

#46676 was marked as duplicate of this issue

Gah… we gonna have to add context to shortcuts (keymaps) names here… why on the brink of release? :/

Gah… we gonna have to add context to shortcuts (keymaps) names here… why on the brink of release? :/
Author
Member

hmm...I can add fuzzy tags for these msgids ("A"~"Z") in jp.po to solve this issue (of course, only solved in Japanese translations).
Do we have a chance to fix the po file and update trunk with them before real 2.76 release?

hmm...I can add fuzzy tags for these msgids ("A"~"Z") in jp.po to solve this issue (of course, only solved in Japanese translations). Do we have a chance to fix the po file and update trunk with them before real 2.76 release?

This issue was referenced by 14bac995f3

This issue was referenced by 14bac995f38251f4a6b7b210ef968dc5311580e8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

You can do that, yes, but not quite sure there will be another i18n update before final release (though I’d like to have one)…

You can do that, yes, but not quite sure there will be another i18n update before final release (though I’d like to have one)…
Author
Member

So, I don't edit the ja.po now. Thank you for fixing and your hard work !

So, I don't edit the ja.po now. Thank you for fixing and your hard work !

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46268
No description provided.