Fix T46268: All Hotkey "C" are unexpectedly translated in menus.

We need custom context here, those are often very short names so context collision is pretty easy.

Also some minor changes (and avoid shadowing varnames)...